[FIX] Avoid button shrinking on smaller screens

--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -12,6 +12,7 @@ form input {
     color: hsl(0, 0%, 17%);
     padding: 1rem 1.4rem;
     flex-grow: 1;
+    min-width: 0;
     border: none;
     border-radius: var(--border-radius) 0 0 var(--border-radius);
     outline: none;
@@ -20,6 +21,7 @@ form input {
 form button {
     background-color: black;
     width: 3.4rem;
+    flex-shrink: 0;
     border: none;
     border-radius: 0 var(--border-radius) var(--border-radius) 0;
 }
